--- a/actividades tic un3/actividad 5/index5.html
+++ b/actividades tic un3/actividad 5/index5.html
@@ -1,20 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Actividad 5</title>
-<script src="./js/script.js"> </script>
-</head>
+<<DOCTYPE html>
+<html lang="es">
 
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="description" content="Actividad 5:Nuria Fernández">
+		<title>Actividad 5:Otras formas de entrada de datos</title>
+		<meta name="viewport" content="width-device-width, initial-scale=1.0">
+		<script src="./js/script.js"></script>
+	</head>
+	
+	<body>
+		<h1>Actividad 5:Otras formas de entrada de datos</h1>
+		<label for="numero1">Número 1:</Label>
+		<input type="number" id="numero1" name="numero1">
+		<br><br>
+		<label for="numero2">Número 2:</label>
+		<input type="number" id="numero2">
+		<br><br>
+		<button onclick="Calcular()">Calcular</button>
+		<p id="solucion">El resultado se mostrará aquí</p>
+	<body>
 
-<h1>Actividad 5: otras formas de entrada y salida de datos.</h1>
-<p>Escribe un número en cada cuadro de texto y pulsa el botón para realizar los cálculos.</p>
-
-<input type="text" id=" numero1" name="numero">
-<input type="text" id=" numero2" name="numero">
-<p id="texto">¡Tu número aprarecerá aquí!</p>
-<button onclick=solucion()> calcular </button>
-
-
-</body>
 </html>
