--- a/actividades tic un3/actividad 2/index.html
+++ b/actividades tic un3/actividad 2/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mi primer progarma</title>
+  <meta charset="UTF-8">
+        <meta name="description" content="Actividad 1 por Nuria FernandezRivas">
+<title>Actividad 2</title>
 <script src="./js/script.js"> </script>
 </head>
 <body>
