--- a/actividades tic un3/actividad 4/index4.html
+++ b/actividades tic un3/actividad 4/index4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mi primer progarma</title>
+<title>Actividad 4 por Nuria Fernández</title>
 <script src="./js/script.js"> </script>
 </head>
 
