--- a/actividades tic un3/actividad 3/index 3.html
+++ b/actividades tic un3/actividad 3/index 3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Actividad 3</title>
+<title>Actividad 3 por Nuria Fernandez</title>
 <script src="./js/script.js"> </script>
 </head>
 <body>
