--- a/actividades tic un3/actividad 2/index.html
+++ b/actividades tic un3/actividad 2/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-        <meta name="description" content="Actividad 2 por Nuria FernandezRivas">
-<title>Actividad 2</title>
+<title>Actividad 2 por Nuria Fernandez Rivas</title>
 <script src="./js/script.js"> </script>
 </head>
 <body>
