--- a/actividades tic un3/actividad 4/index4.html
+++ b/actividades tic un3/actividad 4/index4.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <head>
+    	<meta charset="UTF-8">
+		<meta name="description" content="Actividad 4 por Nuria">
 <title>Actividad 4 por Nuria Fernández</title>
 <script src="./js/script.js"> </script>
 </head>
