--- a/actividades tic un3/actividad 6/index6.html
+++ b/actividades tic un3/actividad 6/index6.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
     	<meta charset="UTF-8">
-		<meta name="description" content="Actividad 6:Nuria">
+		<meta name="description" content="Actividad 6 por Nuria">
   		<title>Actividad 6: Estructira condicional "si-sino"</title>
         <script src="./js/script.js"></script>
     </head>
