--- a/actividades tic un3/actividad 5/index5.html
+++ b/actividades tic un3/actividad 5/index5.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="Actividad 5:Nuria Fernández">
+		<meta name="description" content="Actividad 5 por Nuria Fernández">
 		<title>Actividad 5:Otras formas de entrada de datos</title>
 		<meta name="viewport" content="width-device-width, initial-scale=1.0">
 		<script src="./js/script.js"></script>
