--- a/actividades tic un3/actividad 3/index 3.html
+++ b/actividades tic un3/actividad 3/index 3.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <head>
+    	<meta charset="UTF-8">
+		<meta name="description" content="Actividad 3 por Nuria">
 <title>Actividad 3 por Nuria Fernandez</title>
 <script src="./js/script.js"> </script>
 </head>
