--- a/actividad 8/index.html
+++ b/actividad 8/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="description" content="Actividad 8 por Nuria Fernandez Rivas">
-    <title>Actividad 8: Estructura condicional por Nuria Fernandezernández Rivas "switch"</title>
+    <title>Actividad 8: Estructura condicional "switch" por Nuria Fernández Rivas</title>
     <script src="./js/script.js"></script>
     </head>
 
